--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -9,8 +9,7 @@ env:
   LOCATION: eastus2
   TEMPLATE-FILE: infra/webapp.bicep
   SUBSCRIPTION-ID: d9db034a-4f6a-45f6-9c57-237a9039017e
-  WEBAPP-NAME: devops-webapp-eastus2-49492411
-
+  devops-webapp-eastus2-49492411
 
 jobs:
   #Build, test and publish .net web project in repository
